# backend-rust-saas-ppdb

./: .env.example  .gitignore  ANNOUNCEMENT_TEST_FIXES.md  API_DOCS_README.md  API_DOCUMENTATION_GUIDE.md  API_TESTING.md  AUTH_MODULE_COMPLETE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Makefile  OPENAPI_EXAMPLES.md  OPENAPI_IMPLEMENTATION_CHECKLIST.md  PHASE_20_IMPLEMENTATION_SUMMARY.md  PHASE_20_PROGRESS_UPDATE.md  PHASE_20_SESSION_4_COMPLETE.md  PHASE_20_SESSION_5_COMPLETE.md  QUICK_TEST.sh  README.md  SESSION_2_SUMMARY.md  SESSION_3_SUMMARY.md  SETUP.md  TESTING_GUIDE.md  USER_ENDPOINTS_DOCS.md  all_migrations.sql
migrations/: 001_create_schools.sql  002_create_users.sql  003_create_periods.sql  004_create_registration_paths.sql  005_create_registrations.sql  006_create_documents.sql  007_create_payments.sql  008_create_audit_logs.sql  009_create_federated_identities.sql  010_seed_data.sql
postman/: PPDB_API_Collection.json
scripts/: run_all_tests.sh  run_single_test.sh  run_tests.sh  test_specific.sh
src/: config.rs  lib.rs  main.rs
testing/: .env.example  01-multi-tenant-rbac.md  02-authentication.md  03-complete-flow-test.md  README.md
tests/: announcement_integration_tests.rs  announcement_integration_tests.rs.bak  auth_integration_tests.rs  auth_integration_tests.rs.bak  auth_tests.rs  debug_auth_test.rs  debug_school_test.rs  period_integration_tests.rs  period_integration_tests.rs.bak  registration_integration_tests.rs  registration_integration_tests.rs.bak  registration_tests.rs  school_integration_tests.rs  school_integration_tests.rs.bak  (+7 more)
(+65 files in other folders)
